Added inital working UI for Blackjack and Roulette

--- a/front-end/blackjack.html
+++ b/front-end/blackjack.html
@@ -141,8 +141,9 @@
     <button id="start-btn">Start Game</button>
     <button id="hit-btn" disabled>Hit</button>
     <button id="stand-btn" disabled>Stand</button>
+    <button id="home-btn">Home</button>
 </div>
 <div id="message"></div>
-<script src="blackjack.js"></script>
+<script src="blackjackUI.js"></script>
 </body>
 </html>
