--- a/front-end/roulette.html
+++ b/front-end/roulette.html
@@ -146,9 +146,10 @@
     <input type="number" id="betAmount" placeholder="Bet Amount" min="1" />
     <br />
     <button id="spin-btn">Spin Wheel</button>
+    <button id="home-btn">Home</button>
 </div>
 
 <div id="result"></div>
-<script src="roulette.js"></script>
+<script src="rouletteUI.js"></script>
 </body>
 </html>
