--- a/front-end/slots.html
+++ b/front-end/slots.html
@@ -205,7 +205,8 @@
     <div class="footer">
         Keyboard: <span class="kbd">Space</span> to spin • <span class="kbd">R</span> to reset
     </div>
+    <button id="home-btn">Home</button>
 </main>
-<script src="slots.js"></script>
+<script src="slotsUI.js"></script>
 </body>
 </html>
