--- a/front-end/index.html
+++ b/front-end/index.html
@@ -3,36 +3,149 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎮 All-Inn Casino</title>
+    <title>🎮 All-Inn Casino - Auth</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             background: radial-gradient(circle at center, #0f2027, #203a43, #2c5364);
             color: white;
-            font-family: "Poppins", sans-serif;
+            font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
+            padding: 20px;
         }
-        h1 { font-size: 36px; margin-bottom: 40px; text-shadow: 2px 2px 5px black; }
-        a {
-            text-decoration: none;
-            background: linear-gradient(135deg, #ff4b1f, #1fddff);
-            color: white;
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 40px;
+            text-shadow: 2px 2px 5px black;
+            text-align: center;
+        }
+
+        .btn-container {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        button.main-btn {
             padding: 15px 30px;
             border-radius: 10px;
-            margin: 10px;
-            font-size: 20px;
+            border: none;
+            background: linear-gradient(135deg, #ff4b1f, #1fddff);
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
             transition: transform 0.2s;
+            font-weight: 600;
         }
-        a:hover { transform: scale(1.1); }
+
+            button.main-btn:hover {
+                transform: scale(1.05);
+            }
+
+            button.main-btn:active {
+                transform: scale(0.98);
+            }
+
+        form {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            animation: fadeIn 0.3s ease-in;
+        }
+
+            form.show {
+                display: flex;
+            }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        input {
+            padding: 12px 15px;
+            margin: 10px 0;
+            border-radius: 10px;
+            border: none;
+            font-size: 16px;
+            width: 250px;
+            outline: none;
+        }
+
+            input:focus {
+                box-shadow: 0 0 0 3px rgba(31, 221, 255, 0.3);
+            }
+
+        button.submit-btn {
+            margin-top: 20px;
+            padding: 15px 30px;
+            border-radius: 10px;
+            border: none;
+            background: linear-gradient(135deg, #ff4b1f, #1fddff);
+            color: white;
+            font-size: 18px;
+            cursor: pointer;
+            transition: transform 0.2s;
+            font-weight: 600;
+        }
+
+            button.submit-btn:hover {
+                transform: scale(1.05);
+            }
+
+            button.submit-btn:active {
+                transform: scale(0.98);
+            }
+
+        .error {
+            color: #ff6b6b;
+            margin-top: 10px;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        .success {
+            color: #51cf66;
+            margin-top: 10px;
+            font-size: 14px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-<h1>🎲 Welcome to the All-Inn Casino!</h1>
-<a href="blackjack.html">🃏 Play Blackjack</a>
-<a href="roulette.html">🎡 Play Roulette</a>
-<a href="slots.html">🎰 Play Slots</a>
+
+    <h1>🎲 Welcome to All-Inn Casino!</h1>
+
+    <div class="btn-container">
+        <button class="main-btn" id="signInBtn">Sign In</button>
+        <button class="main-btn" id="signUpBtn">Sign Up</button>
+    </div>
+
+    <form id="authForm">
+        <input type="text" name="username" placeholder="Username" required />
+        <input type="password" name="password" placeholder="Password" required />
+        <button type="submit" class="submit-btn">Submit</button>
+        <div class="error" id="errorMsg"></div>
+    </form>
+
+    <script src="auth.js"></script>
+
 </body>
 </html>
