Made Functional Slots, working on admin control

--- a/front-end/blackjack.html
+++ b/front-end/blackjack.html
@@ -77,7 +77,7 @@
         /* BACK of the card (hidden side) */
         .card .back {
             background: #b00;
-            color: #fff;
+            color: #ffffff;
             transform: rotateY(180deg);
             font-size: 40px;
             align-items: center;
