--- a/front-end/blackjack.html
+++ b/front-end/blackjack.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blackjack</title>
+    <link rel="stylesheet" href="navbar.css">
     <style>
         body {
             background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
@@ -13,11 +14,58 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
         }
 
-        h1 { margin-bottom: 20px; }
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        /* Betting UI */
+        .betting-panel {
+            background: rgba(0, 0, 0, 0.5);
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            border-radius: 15px;
+            padding: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            gap: 15px;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .bet-input {
+            padding: 10px 15px;
+            border-radius: 8px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            font-size: 16px;
+            width: 150px;
+            font-weight: 600;
+        }
+
+            .bet-input:focus {
+                outline: none;
+                border-color: #1fddff;
+            }
+
+        .quick-bet-btn {
+            background: linear-gradient(135deg, #ff4b1f, #1fddff);
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 700;
+            transition: transform 0.2s;
+        }
+
+            .quick-bet-btn:hover {
+                transform: scale(1.05);
+            }
 
         .table {
             position: relative;
@@ -52,39 +100,38 @@
             color: black;
         }
 
-        .card.red { color: #b00; }
+            .card.red {
+                color: #b00;
+            }
 
-        .card.flip { transform: rotateY(180deg); }
+            .card.flip {
+                transform: rotateY(180deg);
+            }
 
-        .card .front,
-        .card .back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+            .card .front,
+            .card .back {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                backface-visibility: hidden;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
 
-        /* FRONT of the card */
-        .card .front {
-            background: white;
-            position: relative;
-        }
+            .card .front {
+                background: white;
+                position: relative;
+            }
 
-        /* BACK of the card (hidden side) */
-        .card .back {
-            background: #b00;
-            color: #ffffff;
-            transform: rotateY(180deg);
-            font-size: 40px;
-            align-items: center;
-            justify-content: center;
-        }
+            .card .back {
+                background: #b00;
+                color: #ffffff;
+                transform: rotateY(180deg);
+                font-size: 40px;
+            }
 
-        /* Corner placement for values and suits */
         .corner {
             position: absolute;
             font-size: 18px;
@@ -92,16 +139,16 @@
             text-align: center;
         }
 
-        .corner.top-left {
-            top: 5px;
-            left: 8px;
-        }
+            .corner.top-left {
+                top: 5px;
+                left: 8px;
+            }
 
-        .corner.bottom-right {
-            bottom: 5px;
-            right: 8px;
-            transform: rotate(180deg); /* mirror like real cards */
-        }
+            .corner.bottom-right {
+                bottom: 5px;
+                right: 8px;
+                transform: rotate(180deg);
+            }
 
         .center-symbol {
             font-size: 32px;
@@ -117,33 +164,70 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background 0.2s;
+            font-weight: 600;
         }
 
-        button:hover { background: #00cc00; }
+            button:hover {
+                background: #00cc00;
+            }
+
+            button:disabled {
+                background: #555;
+                cursor: not-allowed;
+                opacity: 0.5;
+            }
 
         #message {
             font-size: 18px;
             margin-top: 15px;
+            font-weight: 600;
+        }
+
+        .current-bet {
+            background: rgba(255, 215, 0, 0.2);
+            border: 2px solid gold;
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-weight: 700;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
-<h1>♠ Blackjack ♥</h1>
+    <h1>♠ Blackjack ♥</h1>
 
-<div class="table">
-    <h2>Dealer</h2>
-    <div id="dealer-hand" class="hand"></div>
-    <h2>Player</h2>
-    <div id="player-hand" class="hand"></div>
-</div>
+    <div class="betting-panel">
+        <label style="font-weight: 600;">Place Your Bet:</label>
+        <input type="number" id="bet-input" class="bet-input" placeholder="Enter bet amount" min="1" value="10">
+        <button class="quick-bet-btn" onclick="setBet(10)">$10</button>
+        <button class="quick-bet-btn" onclick="setBet(50)">$50</button>
+        <button class="quick-bet-btn" onclick="setBet(100)">$100</button>
+        <button class="quick-bet-btn" onclick="setBet(500)">$500</button>
+    
+    </div>
 
-<div>
-    <button id="start-btn">Start Game</button>
-    <button id="hit-btn" disabled>Hit</button>
-    <button id="stand-btn" disabled>Stand</button>
-    <button id="home-btn">Home</button>
-</div>
-<div id="message"></div>
-<script src="blackjackUI.js"></script>
+    <div class="table">
+        <h2>Dealer</h2>
+        <div id="dealer-hand" class="hand"></div>
+        <h2>Player</h2>
+        <div id="player-hand" class="hand"></div>
+    </div>
+
+    <div>
+        <button id="start-btn">Start Game</button>
+        <button id="hit-btn" disabled>Hit</button>
+        <button id="stand-btn" disabled>Stand</button>
+        <button id="home-btn">Home</button>
+    </div>
+    <div id="message"></div>
+
+    <script src="navbar.js"></script>
+    <script src="blackjackUI.js"></script>
+    <script>
+        function setBet(amount) {
+            document.getElementById('bet-input').value = amount;
+       
+        }
+    </script>
 </body>
 </html>
