--- a/front-end/home.html
+++ b/front-end/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🎮 All-Inn Casino</title>
+    <link rel="stylesheet" href="navbar.css">
     <style>
         body {
             background: radial-gradient(circle at center, #0f2027, #203a43, #2c5364);
@@ -13,33 +14,84 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
         }
-        h1 { font-size: 36px; margin-bottom: 40px; text-shadow: 2px 2px 5px black; }
-        a {
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+
+
+        .game-grid {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(250px, 300px));
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .leaderboard-link {
+            grid-column: 1 / -1;
+            justify-self: center;
+        }
+
+        game-grid a,
+        .game-grid a {
             text-decoration: none;
             background: linear-gradient(135deg, #ff4b1f, #1fddff);
             color: white;
-            padding: 15px 30px;
-            border-radius: 10px;
-            margin: 10px;
+            padding: 20px 30px;
+            border-radius: 15px;
             font-size: 20px;
-            transition: transform 0.2s;
+            transition: all 0.2s;
+            text-align: center;
+            font-weight: 600;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            display: block;
         }
-        a:hover { transform: scale(1.1); }
+
+            .game-grid a:hover {
+                transform: scale(1.05) translateY(-5px);
+                box-shadow: 0 12px 30px rgba(255, 75, 31, 0.4);
+            }
+
+            .game-grid a:active {
+                transform: scale(0.98);
+            }
+
+        #adminBtn {
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            display: none;
+        }
+
+            #adminBtn:hover {
+                box-shadow: 0 12px 30px rgba(239, 68, 68, 0.4);
+            }
+
+        @media (max-width: 768px) {
+            .game-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
-  <h1>🎲 What would you like to play?</h1>
-  <a href="blackjack.html">🃏 Play Blackjack</a>
-  <a href="roulette.html">🎡 Play Roulette</a>
-  <a href="slots.html">🎰 Play Slots</a>
-  <a href="leaderboard.html">🏆 View Leaderboard</a>
+    <div class="container">
+        <h1>🎲 What would you like to play?</h1>
 
-  <a href="admin.html" id="adminBtn" style="display:none;">🛠 Admin Panel</a>
+        <div class="game-grid">
+            <a href="blackjack.html">🃏 Play Blackjack</a>
+            <a href="roulette.html">🎡 Play Roulette</a>
+            <a href="slots.html">🎰 Play Slots</a>
+            <a href="leaderboard.html" class="leaderboard-link">🏆 View Leaderboard</a>
+        </div>
 
-  <script src="home.js"></script>
+        <a href="admin.html" id="adminBtn">🛠 Admin Panel</a>
+    </div>
 
+    <script src="navbar.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
-
