--- a/front-end/roulette.html
+++ b/front-end/roulette.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roulette</title>
+    <link rel="stylesheet" href="navbar.css">
     <style>
         body {
             margin: 0;
@@ -14,12 +15,13 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
         }
 
         h1 {
-            margin-bottom: 10px;
-            font-size: 32px;
+            margin-bottom: 20px;
+            font-size: 42px;
+            text-shadow: 3px 3px 10px black;
         }
 
         .roulette-container {
@@ -37,45 +39,7 @@
             height: 100%;
             border-radius: 50%;
             border: 5px solid #000;
-            background: conic-gradient(
-                    red 0deg 9.73deg,
-                    black 9.73deg 19.46deg,
-                    red 19.46deg 29.19deg,
-                    black 29.19deg 38.92deg,
-                    red 38.92deg 48.65deg,
-                    black 48.65deg 58.38deg,
-                    red 58.38deg 68.11deg,
-                    black 68.11deg 77.84deg,
-                    red 77.84deg 87.57deg,
-                    black 87.57deg 97.3deg,
-                    red 97.3deg 107.03deg,
-                    black 107.03deg 116.76deg,
-                    red 116.76deg 126.49deg,
-                    black 126.49deg 136.22deg,
-                    red 136.22deg 145.95deg,
-                    black 145.95deg 155.68deg,
-                    red 155.68deg 165.41deg,
-                    black 165.41deg 175.14deg,
-                    red 175.14deg 184.87deg,
-                    black 184.87deg 194.6deg,
-                    red 194.6deg 204.33deg,
-                    black 204.33deg 214.06deg,
-                    red 214.06deg 223.79deg,
-                    black 223.79deg 233.52deg,
-                    red 233.52deg 243.25deg,
-                    black 243.25deg 252.98deg,
-                    red 252.98deg 262.71deg,
-                    black 262.71deg 272.44deg,
-                    red 272.44deg 282.17deg,
-                    black 282.17deg 291.9deg,
-                    red 291.9deg 301.63deg,
-                    black 301.63deg 311.36deg,
-                    red 311.36deg 321.09deg,
-                    black 321.09deg 330.82deg,
-                    red 330.82deg 340.55deg,
-                    black 340.55deg 350.28deg,
-                    green 350.28deg 360deg
-            );
+            background: conic-gradient( red 0deg 9.73deg, black 9.73deg 19.46deg, red 19.46deg 29.19deg, black 29.19deg 38.92deg, red 38.92deg 48.65deg, black 48.65deg 58.38deg, red 58.38deg 68.11deg, black 68.11deg 77.84deg, red 77.84deg 87.57deg, black 87.57deg 97.3deg, red 97.3deg 107.03deg, black 107.03deg 116.76deg, red 116.76deg 126.49deg, black 126.49deg 136.22deg, red 136.22deg 145.95deg, black 145.95deg 155.68deg, red 155.68deg 165.41deg, black 165.41deg 175.14deg, red 175.14deg 184.87deg, black 184.87deg 194.6deg, red 194.6deg 204.33deg, black 204.33deg 214.06deg, red 214.06deg 223.79deg, black 223.79deg 233.52deg, red 233.52deg 243.25deg, black 243.25deg 252.98deg, red 252.98deg 262.71deg, black 262.71deg 272.44deg, red 272.44deg 282.17deg, black 282.17deg 291.9deg, red 291.9deg 301.63deg, black 301.63deg 311.36deg, red 311.36deg 321.09deg, black 321.09deg 330.82deg, red 330.82deg 340.55deg, black 340.55deg 350.28deg, green 350.28deg 360deg );
             transition: transform 4s cubic-bezier(0.2, 0.8, 0.3, 1);
         }
 
@@ -94,62 +58,102 @@
         .controls {
             margin-top: 20px;
             text-align: center;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 15px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         select, input {
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
+            padding: 10px;
+            border-radius: 8px;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
             margin: 5px;
             font-size: 16px;
+            font-weight: 600;
         }
+
+            input:focus, select:focus {
+                outline: none;
+                border-color: #1fddff;
+            }
 
         button {
-            background: #28a745;
+            background: linear-gradient(135deg, #22c55e, #16a34a);
             color: white;
             border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
+            border-radius: 8px;
+            padding: 12px 25px;
             font-size: 16px;
-            margin-top: 10px;
+            margin: 5px;
             cursor: pointer;
+            font-weight: 700;
+            transition: all 0.2s;
         }
 
-        button:hover {
-            background: #2ecc71;
+            button:hover {
+                transform: scale(1.05);
+                box-shadow: 0 4px 15px rgba(34, 197, 94, 0.4);
+            }
+
+        #home-btn {
+            background: linear-gradient(135deg, #3b82f6, #1d4ed8);
         }
+
+            #home-btn:hover {
+                box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+            }
 
         #result {
             margin-top: 15px;
             font-size: 20px;
             font-weight: bold;
         }
+
+        .quick-bet-btn {
+            background: linear-gradient(135deg, #6366f1, #4f46e5);
+            padding: 8px 15px;
+            font-size: 14px;
+        }
+
+            .quick-bet-btn:hover {
+                box-shadow: 0 4px 15px rgba(99, 102, 241, 0.4);
+            }
     </style>
 </head>
 <body>
-<h1>🎡 Roulette</h1>
-<div class="roulette-container">
-    <div class="marker"></div>
-    <div id="wheel" class="wheel"></div>
-</div>
+    <h1>🎡 Roulette</h1>
+    <div class="roulette-container">
+        <div class="marker"></div>
+        <div id="wheel" class="wheel"></div>
+    </div>
 
-<div class="controls">
-    <label for="betType">Bet Type:</label>
-    <select id="betType">
-        <option value="red">Red</option>
-        <option value="black">Black</option>
-        <option value="even">Even</option>
-        <option value="odd">Odd</option>
-        <option value="number">Specific Number</option>
-    </select>
-    <input type="number" id="betValue" placeholder="Number (0-36)" style="width:140px;">
-    <input type="number" id="betAmount" placeholder="Bet Amount" min="1" />
-    <br />
-    <button id="spin-btn">Spin Wheel</button>
-    <button id="home-btn">Home</button>
-</div>
+    <div class="controls">
+        <label for="betType" style="font-weight: 600;">Bet Type:</label>
+        <select id="betType">
+            <option value="red">Red</option>
+            <option value="black">Black</option>
+            <option value="even">Even</option>
+            <option value="odd">Odd</option>
+            <option value="number">Specific Number</option>
+        </select>
+        <input type="number" id="betValue" placeholder="Number (0-36)" style="width:140px;">
+        <br>
+        <label for="betAmount" style="font-weight: 600;">Bet Amount:</label>
+        <input type="number" id="betAmount" placeholder="Enter amount" min="1" value="10" />
+        <button class="quick-bet-btn" onclick="document.getElementById('betAmount').value=10">$10</button>
+        <button class="quick-bet-btn" onclick="document.getElementById('betAmount').value=50">$50</button>
+        <button class="quick-bet-btn" onclick="document.getElementById('betAmount').value=100">$100</button>
+        <br />
+        <button id="spin-btn">Spin Wheel</button>
+        <button id="home-btn">Home</button>
+    </div>
 
-<div id="result"></div>
-<script src="rouletteUI.js"></script>
+    <div id="result"></div>
+
+    <script src="navbar.js"></script>
+    <script src="rouletteUI.js"></script>
 </body>
 </html>
