--- a/front-end/slots.html
+++ b/front-end/slots.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎰 Mini Casino — Slots</title>
-
+    <title>🎰 Mini Casino – Slots</title>
+    <link rel="stylesheet" href="navbar.css">
     <style>
-        * { box-sizing: border-box; }
-        html, body { height: 100%; }
+        * {
+            box-sizing: border-box;
+        }
+
+        html, body {
+            height: 100%;
+        }
+
         body {
             margin: 0;
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial;
@@ -36,61 +42,145 @@
             border-bottom: 1px solid rgba(255,255,255,.08);
         }
 
-        .title { font-size: 20px; font-weight: 700; }
-        .subtitle { font-size: 12px; color: #93c5fd; opacity: .9; }
+        .title {
+            font-size: 20px;
+            font-weight: 700;
+        }
+
+        .subtitle {
+            font-size: 12px;
+            color: #93c5fd;
+            opacity: .9;
+        }
 
         .controls {
             display: grid;
             grid-template-columns: 1fr auto;
             gap: 16px;
             padding: 16px 24px;
+            background: rgba(99, 102, 241, 0.05);
+            border-bottom: 1px solid rgba(255,255,255,.08);
         }
-        .control-group { display: flex; align-items: center; gap: 12px; flex-wrap: wrap; }
-        label { font-size: 14px; color: #c7d2fe; }
+
+        .control-group {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
+        label {
+            font-size: 14px;
+            color: #c7d2fe;
+            font-weight: 600;
+        }
+
+        .bet-input {
+            background: #0b1226;
+            color: #e5e7eb;
+            border: 2px solid rgba(99, 102, 241, 0.3);
+            padding: 8px 12px;
+            border-radius: 10px;
+            outline: none;
+            min-width: 120px;
+            font-weight: 600;
+            font-size: 16px;
+        }
+
+            .bet-input:focus {
+                border-color: #6366f1;
+            }
+
+        .quick-bet {
+            background: linear-gradient(135deg, #6366f1, #4f46e5);
+            border: none;
+            color: white;
+            padding: 8px 15px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.2s;
+            font-size: 14px;
+        }
+
+            .quick-bet:hover {
+                transform: scale(1.05);
+                box-shadow: 0 4px 15px rgba(99, 102, 241, 0.4);
+            }
+
         select {
-            background: #0b1226; color: #e5e7eb;
+            background: #0b1226;
+            color: #e5e7eb;
             border: 1px solid rgba(255,255,255,.08);
-            padding: 8px 10px; border-radius: 10px;
-            outline: none; min-width: 90px;
+            padding: 8px 10px;
+            border-radius: 10px;
+            outline: none;
+            min-width: 90px;
         }
 
         .btn {
-            appearance: none; border: none; outline: none; cursor: pointer;
+            appearance: none;
+            border: none;
+            outline: none;
+            cursor: pointer;
             background: linear-gradient(180deg, #22c55e, #16a34a);
-            color: white; font-weight: 700; letter-spacing: .4px;
+            color: white;
+            font-weight: 700;
+            letter-spacing: .4px;
             padding: 20px 30px;
             border-radius: 20px;
             box-shadow: 0 15px 30px rgba(34,197,94,.35);
             transition: transform .06s ease, filter .2s ease;
         }
-        .btn:hover { filter: brightness(1.05); }
-        .btn:active { transform: translateY(1px) scale(.99); }
-        .btn[disabled] { filter: grayscale(.9) brightness(.6); cursor: not-allowed; }
+
+            .btn:hover {
+                filter: brightness(1.05);
+            }
+
+            .btn:active {
+                transform: translateY(1px) scale(.99);
+            }
+
+            .btn[disabled] {
+                filter: grayscale(.9) brightness(.6);
+                cursor: not-allowed;
+            }
 
         .btn-secondary {
             background: linear-gradient(180deg, #64748b, #475569);
             box-shadow: 0 8px 18px rgba(100,116,139,.35);
         }
 
-        .machine { padding: 18px 24px 24px; }
+        .machine {
+            padding: 18px 24px 24px;
+        }
+
         .reels {
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 14px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 14px;
             background: radial-gradient(900px 240px at 50% -20%, rgba(99,102,241,.15), rgba(2,6,23,.4));
             border: 1px solid rgba(255,255,255,.08);
-            border-radius: 16px; padding: 16px; position: relative;
+            border-radius: 16px;
+            padding: 16px;
+            position: relative;
             overflow: hidden;
         }
 
-        .reels::after {
-            content: ""; position: absolute;
-            left: 10px; right: 10px; top: 50%;
-            transform: translateY(-50%);
-            height: 74px;
-            border: 1px dashed rgba(99,102,241,.5);
-            border-left: 0; border-right: 0;
-            pointer-events: none;
-            box-shadow: inset 0 0 60px rgba(99,102,241,.15);
-        }
+            .reels::after {
+                content: "";
+                position: absolute;
+                left: 10px;
+                right: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+                height: 74px;
+                border: 1px dashed rgba(99,102,241,.5);
+                border-left: 0;
+                border-right: 0;
+                pointer-events: none;
+                box-shadow: inset 0 0 60px rgba(99,102,241,.15);
+            }
 
         .reel {
             background: #030712;
@@ -104,7 +194,10 @@
         }
 
         .strip {
-            position: absolute; left: 0; right: 0; top: 0;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
             will-change: transform;
         }
 
@@ -122,20 +215,27 @@
             grid-template-columns: 1fr 1fr;
             gap: 16px;
         }
+
         .stat {
             background: #0b1226;
             border: 1px solid rgba(255,255,255,.06);
             border-radius: 12px;
             padding: 12px 14px;
         }
-        .stat h4 {
-            margin: 0 0 8px;
-            font-size: 12px;
-            color: #93c5fd;
-            letter-spacing: .4px;
-            font-weight: 700;
-        }
-        .stat p { margin: 0; font-size: 14px; color: #e2e8f0; }
+
+            .stat h4 {
+                margin: 0 0 8px;
+                font-size: 12px;
+                color: #93c5fd;
+                letter-spacing: .4px;
+                font-weight: 700;
+            }
+
+            .stat p {
+                margin: 0;
+                font-size: 14px;
+                color: #e2e8f0;
+            }
 
         .footer {
             padding: 12px 24px 22px;
@@ -143,6 +243,7 @@
             color: #94a3b8;
             opacity: .9;
         }
+
         .kbd {
             background: #0b1226;
             border: 1px solid rgba(255,255,255,.1);
@@ -150,12 +251,13 @@
             border-radius: 6px;
             font-size: 11px;
         }
+
         #home-btn {
             appearance: none;
             border: none;
             outline: none;
             cursor: pointer;
-            background: linear-gradient(180deg, #3b82f6, #1d4ed8); /* blue gradient */
+            background: linear-gradient(180deg, #3b82f6, #1d4ed8);
             color: white;
             font-weight: 700;
             letter-spacing: .4px;
@@ -163,74 +265,85 @@
             border-radius: 20px;
             box-shadow: 0 12px 24px rgba(59,130,246,.35);
             transition: transform .06s ease, filter .2s ease;
-            margin: 20px auto 0; /* center it below the card */
+            margin: 20px auto 0;
             display: block;
-}
+        }
 
-#home-btn:hover {
-  filter: brightness(1.1);
-}
+            #home-btn:hover {
+                filter: brightness(1.1);
+            }
 
-#home-btn:active {
-  transform: translateY(1px) scale(.98);
-}
+            #home-btn:active {
+                transform: translateY(1px) scale(.98);
+            }
 
+        .current-bet-display {
+            background: linear-gradient(135deg, #f59e0b, #d97706);
+            padding: 8px 16px;
+            border-radius: 10px;
+            font-weight: 700;
+            color: white;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
-<main class="card">
-    <div class="card-header">
-        <div>
-            <div class="title">🎰 Mini Casino — Slots</div>
-            <div class="subtitle">3×3 Reels • 5 Paylines • Animated Spins</div>
+    <main class="card">
+        <div class="card-header">
+            <div>
+                <div class="title">🎰 Mini Casino – Slots</div>
+                <div class="subtitle">3×3 Reels • 5 Paylines • Animated Spins</div>
+            </div>
         </div>
-    </div>
 
-    <section class="controls">
-        <div class="control-group">
-            <label for="bet">Bet per spin</label>
-            <select id="bet">
-                <option value="1">$1</option>
-                <option value="2">$2</option>
-                <option value="5">$5</option>
-                <option value="10">$10</option>
-            </select>
-            <label for="lines">Lines</label>
-            <select id="lines">
-                <option value="1">1</option>
-                <option value="3">3</option>
-                <option value="5" selected>5</option>
-            </select>
-        </div>
-        <div class="control-group">
-            <button id="spinBtn" class="btn">SPIN (Space)</button>
-        </div>
-    </section>
+        <section class="controls">
+            <div class="control-group">
+                <label for="bet">Bet Amount:</label>
+                <input type="number" id="bet" class="bet-input" value="10" min="1">
+                <button class="quick-bet" onclick="document.getElementById('bet').value=10">$10</button>
+                <button class="quick-bet" onclick="document.getElementById('bet').value=50">$50</button>
+                <button class="quick-bet" onclick="document.getElementById('bet').value=100">$100</button>
+                <div class="current-bet-display">
+                    Bet: $<span id="current-bet">10</span>
+                </div>
+            </div>
+            <div class="control-group">
+                <button id="spinBtn" class="btn">SPIN (Space)</button>
+            </div>
+        </section>
 
-    <section class="machine">
-        <div class="reels">
-            <div class="reel"><div class="strip"></div></div>
-            <div class="reel"><div class="strip"></div></div>
-            <div class="reel"><div class="strip"></div></div>
-        </div>
-    </section>
+        <section class="machine">
+            <div class="reels">
+                <div class="reel"><div class="strip"></div></div>
+                <div class="reel"><div class="strip"></div></div>
+                <div class="reel"><div class="strip"></div></div>
+            </div>
+        </section>
 
-    <section class="info">
-        <div class="stat">
-            <h4>Balance</h4>
-            <p id="balance">$100</p>
-        </div>
-        <div class="stat">
-            <h4>Last result</h4>
-            <p id="lastResult">Welcome! Press SPIN to play.</p>
-        </div>
-    </section>
+        <section class="info">
+            <div class="stat">
+                <h4>Balance</h4>
+                <p id="balance">$100</p>
+            </div>
+            <div class="stat">
+                <h4>Last result</h4>
+                <p id="lastResult">Welcome! Press SPIN to play.</p>
+            </div>
+        </section>
 
-    <div class="footer">
-        Keyboard: <span class="kbd">Space</span> to spin • <span class="kbd">R</span> to reset
-    </div>
-    <button id="home-btn">Home</button>
-</main>
-<script src="slotsUI.js"></script>
+        <div class="footer">
+            Keyboard: <span class="kbd">Space</span> to spin • <span class="kbd">R</span> to reset
+        </div>
+        <button id="home-btn">Home</button>
+    </main>
+
+    <script src="navbar.js"></script>
+    <script src="slotsUI.js"></script>
+    <script>
+        // Update current bet display when input changes
+        document.getElementById('bet').addEventListener('input', function () {
+            document.getElementById('current-bet').textContent = this.value;
+        });
+    </script>
 </body>
 </html>
