Fixed some incorrect UI in the website

--- a/front-end/roulette.html
+++ b/front-end/roulette.html
@@ -8,7 +8,8 @@
     <style>
         body {
             margin: 0;
-            background: radial-gradient(circle at center, #09203f, #000);
+            background: radial-gradient(circle at center, #064e3b, #000);
+
             color: #fff;
             font-family: "Poppins", sans-serif;
             display: flex;
