Added comments explaining functionality and included warning at the bottom

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -1,3 +1,4 @@
+<!-- Home Page UI -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +37,17 @@
             grid-column: 1 / -1;
             justify-self: center;
         }
+        .responsible-gaming {
+            margin-top: 40px;
+            padding: 15px 20px;
+            text-align: center;
+            font-size: 14px;
+            color: #facc15; /* bright yellow for visibility */
+            background: rgba(0,0,0,0.4);
+            border-radius: 10px;
+            max-width: 600px;
+        }
+
 
         game-grid a,
         .game-grid a {
@@ -93,5 +105,9 @@
 
     <script src="navbar.js"></script>
     <script src="home.js"></script>
+<footer class="responsible-gaming">
+    <p>⚠️ Remember: Gambling should be fun. Take regular breaks and play responsibly.</p>
+</footer>
+
 </body>
 </html>
